maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:25: error: not found: value x
indic(x,y,0) 
      ^JediEscaper:25: error: not found: value y
indic(x,y,0) 
        ^